# fluid

./: .gitignore
admin-dashboard/: package-lock.json  package.json
admin-dashboard/app/: globals.css
admin-dashboard/app/admin/dashboard/: page.tsx
admin-dashboard/app/admin/transactions/: page.tsx
admin-dashboard/components/dashboard/: TransactionTable.tsx  types.ts
admin-dashboard/lib/: transaction-history.ts
client/: README.md  package.json  tsconfig.json
client/src/: index.ts
fluid-cli/: Cargo.toml
frontend/: package-lock.json  package.json
server/: .env.example  Cargo.toml  README.md  dev.db  package-lock.json  package.json  prisma.config.ts
server/benchmarks/: signing-report.md
server/prisma/: schema.prisma  seed.ts
server/rust/src/: lib.rs
server/scripts/: horizonFailoverDemo.mjs
server/src/: config.ts  index.ts
server/src/benchmarks/: load_test.ts  signing.ts  simple_benchmark.ts
server/src/handlers/: feeBump.ts
server/src/horizon/: failoverClient.ts
server/src/middleware/: errorHandler.ts
server/src/services/: alertService.ts  webhook.test.ts  webhook.ts
server/src/signing/: index.ts  native.ts  signerPool.test.ts  signerPool.ts
server/src/utils/: db.ts  feeCalculator.ts  logger.ts  networkVerification.test.ts  networkVerification.ts
server/src/workers/: balanceMonitor.ts  ledgerMonitor.ts
