[package]
name = "fluid-signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
ed25519-dalek = "2.2.0"
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.3.3"
stellar-strkey = "0.0.16"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
zeroize = "1.8.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
vaultrs = "0.8.0"
vaultrs-login = "0.2.3"

[build-dependencies]
napi-build = "2.3.0"
